@@ -1,3 +1,10 @@
+2014-07-11  Simon Cook  <simon.cook@embecosm.com>
+
+	* gcc_plugin/feature-extract.cpp: Use bversion.h to determine version.
+	Removed plugin-version.h from includes.
+	* gcc_plugin/Makefile.am: Build with -fno-rtti.
+	* gcc_plugin/Makefile.in: Regenerated.
+
 2014-07-09  Simon Cook  <simon.cook@embecosm.com>
 
 	* include/mageec/mageec-ml.h (mageec_ml::init): Add path to database
